# raipy-elt

./: .gitignore  README.md  pyproject.toml
src/raipy_elt/: __main__.py
src/raipy_elt/data_quality/: checks.py  errors.py  models.py
src/raipy_elt/extract/: _utilities.py  configs.py  configs.yaml  raw_to_bronze.py
src/raipy_elt/pipelines/: landing.py  pipeline.py  records.py
src/raipy_elt/utilities/: archiving.py  dataframe.py  delta.py  misc.py
test/: conftest.py
test/test_raipy_elt/test_data_quality/: test_checks.py  test_errors.py  test_models.py
test/test_raipy_elt/test_utilities/: test_archiving.py
